@@ -2,15 +2,15 @@ FROM multiarch/alpine:x86_64-v3.9
 
 ARG arch=x86_64
 
-ENV CHECK_INTERVAL=60 \
+ENV CHECK_INTERVAL=90 \
     NAMESPACE= \
     DEFAULT_SECONDS_BETWEEN_RESTARTS=15 \
-    DEFAULT_FRAME_SIZE=450 \
-    DEFAULT_MAX_RESTARTS_IN_FRAME=3 \
-    DEFAULT_SECONDS_BETWEEN_NEXT_FRAME=1500 \
-    DEFAULT_MAX_CHECKS_TO_GIVE_UP=30 \
-    DEFAULT_MAX_HISTORIC_ENTRIES=30 \
-    DEFAULT_ENABLE_DUPLICATED_SERVICES_REMOVING=false \
+    DEFAULT_FRAME_SIZE=300 \
+    DEFAULT_MAX_RESTARTS_IN_FRAME=2 \
+    DEFAULT_SECONDS_BETWEEN_NEXT_FRAME=600 \
+    DEFAULT_MAX_CHECKS_TO_GIVE_UP=50 \
+    DEFAULT_MAX_HISTORIC_ENTRIES=50 \
+    DEFAULT_ENABLE_DUPLICATED_SERVICES_REMOVING=true \
     DEFAULT_ENABLE_AUTO_HEAL=true \
     TZ=Europe/Warsaw \
     HTTP_ADDRESS=0.0.0.0 \
@@ -18,7 +18,7 @@ ENV CHECK_INTERVAL=60 \
     HTTP_PREFIX= \
     DEFAULT_NOTIFY_URL= \
     DEFAULT_NOTIFY_LEVEL=info \
-    DB_PATH=:memory:
+    DB_PATH=/var/database.sqlite3
 
 COPY ./ /opt/repairman
 
