@@ -8,7 +8,7 @@ import json
 
 from .adapter import Adapter, DockerAdapter
 from .journal import Journal
-from .tasks import DeduplicationTask, HealTask, Task
+from .tasks import DeduplicationTask, HealTask, Task, MonitorRepairedTask
 from .entity import ApplicationGlobalPolicy
 from .http import HttpServer
 
@@ -36,6 +36,7 @@ class Repairman:
         self._adapter = DockerAdapter(self._policy)
         self._tasks = [
             DeduplicationTask(adapter=self._adapter, journal=self._journal, app_policy=self._policy),
+            MonitorRepairedTask(adapter=self._adapter, journal=self._journal, app_policy=self._policy),
             HealTask(adapter=self._adapter, journal=self._journal, app_policy=self._policy)
         ]
 
@@ -47,7 +48,11 @@ class Repairman:
         tornado.log.app_log.info(json.dumps(self._policy.to_dict()))
 
         http_server = HttpServer(address=self._http_address, port=self._http_port, server_path_prefix=self._http_prefix)
-        http_server.run(lambda: self._journal.get_summary(self._adapter.find_all_containers))
+        http_server.run(lambda limit:
+                        self._journal.get_summary(
+                            self._adapter.find_all_containers_in_namespace,
+                            last_events_limit=limit
+                        ))
 
         while True:
             for task in self._tasks:
